fix(button): fix overlapped buttons in single trip page

--- a/src/styles/components/filter-bar/_filterMenu.scss
+++ b/src/styles/components/filter-bar/_filterMenu.scss
@@ -40,11 +40,3 @@
     padding: 1rem 0.2rem;
   }
 }
-
-.blue-button {
-  @include button;
-}
-
-.red-button {
-  @include button($color-red);
-}
